# RAVEN_MESH

./: .gitignore  README.md  mesh.toml.example
core/: config.py  core.py  manifest_validator.py  supervisor.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
docs/: PHILOSOPHY.md  PROTOCOL.md  PROTOTYPE.md  SPEC.md
experiments/rust_mesh/: ANALYSIS.md  Cargo.toml
experiments/rust_mesh/manifests/: echo.json  test.yaml
experiments/rust_mesh/src/: audit.rs  canonical.rs  echo.rs  lib.rs  main.rs  manifest.rs  router.rs  state.rs  supervisor.rs
experiments/rust_mesh/tests/: integration.rs
manifests/: bench.yaml  demo.yaml  full_demo.yaml  kanban_demo.yaml  mesh_db_demo.yaml  nexus_agent_demo.yaml  nexus_agent_isolated_demo.yaml  voice_actor_demo.yaml
node_sdk/: __init__.py  sse.py
nodes/: ui_visibility.py
notes/: 2026-05-10_morning_review.md  2026-05-10_proposal_core_admin_merge.md  2026-05-10_spec_questions.md  MORNING_BRIEFING.md  PROTOCOL_CONSTRAINT.md  architecture_compare.md  benchmark_design.md  benchmark_results_20260510.md  cleanup_pass.md  dashboard_node_v2.md  docs_audit.md  inspiration_20260510.md  manifest_validation_design.md  manifest_validator_wired.md  mesh_only_ideas_20260510.md  migration_path.md  operational_playbook.md  register_timestamp_check.md  replay_protection_extended.md  security_audit_20260510.md  security_hardening.md  security_postmortem.md  sse_consolidation.md  synthesis_20260510.md  testing_strategy.md  toml_config_loader.md  v1_prd_draft.md  visibility_removal.md  wave_1_critique.md
(+272 files in other folders)
