[package]
name = "rust_mesh"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonschema = { version = "0.18", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rust_mesh"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
